feat: implement trading capital management and validation in portfolio

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ QUOTE_MINT="EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v" # USDC
 TRADING_INTERVAL_SEC=60
 SLIPPAGE_BPS=50
 MAX_DRAWDOWN_PCT=20
+
+# Trading capital management
+TRADING_CAPITAL_SOL=0.1        # Amount of SOL to use for trading (default: 0.1 SOL)
+MAX_POSITION_SIZE_PCT=80.0     # Max % of trading capital per position (default: 80%)
+RESERVE_BALANCE_SOL=0.02       # Minimum SOL to keep for fees (default: 0.02 SOL)
