feat: add trading simulation mode and integrate with portfolio management

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ MAX_DRAWDOWN_PCT=20
 TRADING_CAPITAL_SOL=0.1        # Amount of SOL to use for trading (default: 0.1 SOL)
 MAX_POSITION_SIZE_PCT=80.0     # Max % of trading capital per position (default: 80%)
 RESERVE_BALANCE_SOL=0.02       # Minimum SOL to keep for fees (default: 0.02 SOL)
+
+# Simulation mode (RECOMENDADO para testing)
+SIMULATION_MODE=true           # true = simular operaciones, false = transacciones reales (PELIGROSO)
+SIMULATION_INITIAL_BALANCE=1.0 # Balance inicial en SOL para simulación (default: 1.0 SOL)
