Implement trade execution and API key config

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@
 # MNEMONIC="palabra1 palabra2 palabra3 ... palabra12"
 RPC_ENDPOINT="https://api.mainnet-beta.solana.com"
 CRYPTOCOMPARE_KEY=""
+JUPITER_API_KEY=""        # Clave API opcional para la API de Jupiter
 BASE_MINT="So11111111111111111111111111111111111111112"   # SOL
 QUOTE_MINT="EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v" # USDC
 TRADING_INTERVAL_SEC=60
